# gst-plugins-base

./: configure.ac
docs/libs/: gst-plugins-base-libs-sections.txt
gst-libs/gst/: Makefile.am  meson.build
gst-libs/gst/http/: Makefile.am  gsthttpcookie.c  gsthttpcookie.h  gsthttpcookiejar.c  gsthttpcookiejar.h  meson.build
gst-libs/gst/pbutils/: Makefile.am  markup-utils.c  markup-utils.h  meson.build
gst/playback/: gstplaysink.c  gstsubtitleoverlay.c  gsturidecodebin.c  gsturidecodebin3.c
gst/subparse/: Makefile.am  gstsubparse.c  gstsubparse.h  meson.build
pkgconfig/: Makefile.am  gstreamer-http-uninstalled.pc.in  gstreamer-http.pc.in  gstreamer-plugins-base-uninstalled.pc.in  gstreamer-plugins-base.pc.in
win32/common/: libgsthttp.def
